--- a/css/app.css
+++ b/css/app.css
@@ -1001,7 +1001,7 @@
   }
   .blog-note {
     background-color: #5c2e98;
-    height: 250px;
+    height: 35vh;
     padding-top: 200px;
     font-weight: 600;
     display: flex;
