--- a/css/app.css
+++ b/css/app.css
@@ -24,8 +24,12 @@
   border-radius: 50em;
   border-width: 1px;
 }
-#nav ul li {
-  margin-left: 50px;
+
+#id {
+  margin-left: 0px;
+}
+#id li {
+  margin-left: 70px;
 }
 .hero {
   display: flex;
@@ -292,7 +296,7 @@
   font-size: 20px;
   font-weight: 600;
   line-height: 24px;
-  margin-right: 150px;
+  margin-right: 120px;
   background: #1d1d1d;
   position: relative;
   padding: 10px;
@@ -319,6 +323,7 @@
   font-weight: 500;
   font-size: 17px;
   display: flex;
+  margin-left: 100px;
   margin-right: 200px;
   justify-content: space-around;
   text-align: center;
@@ -348,7 +353,7 @@
   display: flex;
   justify-content: center;
   align-self: center;
-  height: 80vh;
+  height: 100vh;
   margin-top: -150px;
   margin-left: 70px;
 }
@@ -375,6 +380,18 @@
   margin-top: 20px;
   margin-left: 25px;
 }
+.first-img {
+  height: 505px;
+  width: 280px;
+}
+.second-img {
+  height: 450px;
+  width: 280px;
+}
+.third-img {
+  height: 450px;
+  width: 280px;
+}
 .testimonial-img {
   position: absolute;
   display: flex;
@@ -383,8 +400,6 @@
 }
 .testimonial-img img {
   margin-left: 150px;
-  height: 350px;
-  width: 280px;
 }
 .clients-section {
   height: 60vh;
@@ -583,7 +598,7 @@
 .about-img {
   width: 100%;
   position: absolute;
-    height: 500px;
+  height: 500px;
 }
 .about-hero h1 {
   position: relative;
@@ -856,10 +871,11 @@
     font-size: 9px;
     font-weight: 600;
     line-height: 24px;
-    margin-right: 8px;
+    margin-left: 5px;
+    margin-right: 5px;
     background: #1d1d1d;
     position: relative;
-    padding: 1.5px;
+    padding: 2px;
     margin-bottom: 20px;
     border-width: thin;
     border: 0.5px solid #914800;
@@ -881,9 +897,10 @@
   .services-list {
     list-style: none;
     font-weight: 500;
-    font-size: 9.5px;
+    font-size: 8.5px;
     display: flex;
-    margin-right: 20px;
+    margin-right: 5px;
+    margin-left: 1px;
     justify-content: space-around;
     text-align: center;
   }
@@ -911,7 +928,7 @@
     display: flex;
     justify-content: center;
     align-self: center;
-    height: 40vh;
+    height: 41vh;
     margin-top: -45px;
     margin-left: 40px;
   }
@@ -938,6 +955,18 @@
     margin-top: 20px;
     margin-left: 10px;
   }
+  .first-img {
+    height: 101px;
+    width: 80px;
+  }
+  .second-img {
+    height: 90px;
+    width: 80px;
+  }
+  .third-img {
+    height: 90px;
+    width: 80px;
+  }
   .testimonial-img {
     position: absolute;
     display: flex;
@@ -946,8 +975,6 @@
   }
   .testimonial-img img {
     margin-left: 10px;
-    height: 90px;
-    width: 80px;
   }
   .clients-section {
     height: 25vh;
@@ -1001,7 +1028,7 @@
   }
   .blog-note {
     background-color: #5c2e98;
-    height: 250px;
+    height: 45vh;
     padding-top: 200px;
     font-weight: 600;
     display: flex;
@@ -1010,8 +1037,6 @@
     font-size: 13px;
   }
   /*services page*/
-  #services-heading{
-  }
   .webdev {
     margin-top: -150px;
     margin-left: 20px;
@@ -1305,6 +1330,7 @@
     font-weight: 600;
     font-size: 13px;
     display: flex;
+    margin-left: 10px;
     margin-right: 20px;
     justify-content: space-around;
     text-align: center;
@@ -1335,6 +1361,18 @@
   .sub-testimony {
     font-size: 20px;
   }
+  .first-img {
+   height: 168px;
+    width: 150px;
+  }
+  .second-img {
+    height: 150px;
+    width: 150px;
+  }
+  .third-img {
+    height: 150px;
+    width: 150px;
+  }
   .testimonial-img {
     position: absolute;
     display: flex;
@@ -1343,8 +1381,6 @@
   }
   .testimonial-img img {
     margin-left: 10px;
-    height: 150px;
-    width: 150px;
   }
   .clients-section {
     margin-top: -150px;
@@ -1661,6 +1697,7 @@
   .services-list {
     font-weight: 600;
     font-size: 18px;
+    margin-left: 5px;
     display: flex;
     margin-right: 20px;
     justify-content: space-around;
@@ -1676,6 +1713,18 @@
     height: 200px;
     margin-left: -40px;
   }
+  .first-img {
+   height: 280px;
+    width: 200px;
+  }
+  .second-img {
+    height: 250px;
+    width: 200px;
+  }
+  .third-img {
+   height: 250px;
+    width: 200px;
+  }
   .testimonial-img {
     position: absolute;
     display: flex;
@@ -1683,9 +1732,7 @@
     margin-top: 220px;
   }
   .testimonial-img img {
-    margin-left: 10px;
-    height: 250px;
-    width: 200px;
+    margin-left: 20px;
   }
   .clients-section {
     height: 50vh;
@@ -1717,7 +1764,7 @@
   #stroke-2 {
     width: 250px;
     margin-top: -20px;
-    margin-left: 255px;
+    margin-left: 35%;
     height: 25px;
   }
   .blog-content {
@@ -1740,7 +1787,7 @@
   }
   .blog-note {
     background-color: #5c2e98;
-    height: 50vh;
+    height: 65vh;
     padding-top: 400px;
     font-weight: 600;
     font-size: 30px;
@@ -1757,7 +1804,7 @@
   .webdev-h1 {
     height: 30px;
     margin-left: 270px;
-    margin-top: 40px;
+    margin-top: 70px;
   }
   .webdev-img {
     height: 230px;
@@ -1786,7 +1833,7 @@
   }
   .branding-h1 {
     height: 30px;
-    margin-top: 40px;
+    margin-top: 70px;
     margin-left: 30px;
   }
   .branding-img {
@@ -1797,7 +1844,7 @@
   .branding-para {
     font-size: 20px;
     margin-top: 30px;
-    padding-right: 250px;
+    padding-right: 350px;
     margin-left: 20px;
   }
   .viewbtn-1 {
@@ -1824,13 +1871,21 @@
     margin-top: -350px;
   }
 }
-@media (min-width: 1001px) and (max-width: 1400px) {
+@media (min-width: 1001px) and (max-width: 1024px) {
+  #id {
+    margin-left: 30px;
+  }
+  #id li {
+    font-size: 12px;
+    margin-left: 70px;
+  }
   .hero-img {
-    margin-left: 0px;
+    margin-left: 20px;
     margin-top: 100px;
     border-bottom: 0;
     border-right: 0;
-    height: 400px;
+    height: 300px;
+    margin-right: 10px;
   }
   .links {
     margin-top: 220px;
@@ -1846,7 +1901,368 @@
     margin-left: 150px;
   }
   .clients {
-    margin-left: -80px;
+    margin-left: 9%;
+    margin-top: 160px;
+  }
+  .client0 {
+    width: 300.01px;
+    height: 300.01px;
+  }
+  .hero-img1 {
+    padding-top: 50px;
+    margin-left: 10px;
+    width: 300.01px;
+    height: 300.01px;
+  }
+  .bloom {
+    height: 500px;
+    margin-top: 100px;
+    margin-left: -50px;
+  }
+  .whatsapp {
+    margin-top: 400px;
+    margin-left: -65px;
+  }
+  .content {
+    margin-top: 200px;
+  }
+  .left-content {
+    display: flex;
+  }
+  .left {
+    height: 200px;
+    margin-left: -285px;
+    margin-right: 100px;
+    margin-top: 55px;
+  }
+  .leftie {
+    height: 200px;
+    width: 400px;
+    margin-top: 55px;
+    margin-right: 102px;
+  }
+  .main-content {
+    margin-top: 150px;
+    margin-left: -200px;
+    width: 90vw;
+    height: 550px;
+    margin-right: -100px;
+  }
+  .carousel-content {
+    margin-top: 70px;
+    padding-top: 7px;
+    margin-left: 50px;
+    height: 300px;
+    width: 800px;
+  }
+  .carousel {
+    height: 300px;
+    width: 500px;
+    margin-left: 3px;
+    padding-bottom: 5px;
+  }
+  .name {
+    height: 60px;
+    width: 200px;
+    margin-left: 300px;
+    margin-top: 50px;
+  }
+  .para {
+    padding-left: 10px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+    margin-top: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+  .right-content {
+    margin-top: 550px;
+    margin-left: -40px;
+    margin-right: -10px;
+  }
+  .green {
+    margin-top: 30px;
+    width: 500px;
+    height: 200px;
+  }
+  .work-images {
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #work-img {
+    margin-left: -250px;
+  }
+  .img-1 {
+    height: 250px;
+    width: 250px;
+  }
+  .img-2 {
+    margin-top: 5px;
+    height: 250px;
+    width: 250px;
+    border: 20px solid white;
+    border-left: 0;
+    border-bottom: 0;
+    border-right: 0;
+  }
+  .img-3 {
+    margin-top: 5px;
+    height: 250px;
+    width: 250px;
+    border: 6px solid #ff8100;
+    border-top: 0;
+    border-left: 0;
+  }
+  #work-images-1 {
+    margin-left: -450px;
+  }
+  #work-images-2 {
+    margin-top: -255px;
+    margin-left: 150px;
+  }
+  #work-images-3 {
+    margin-top: -255px;
+    margin-left: 750px;
+  }
+  .work-text {
+    background-color: #5c2e98;
+    margin-top: -200px;
+    height: 400px;
+    padding-top: 300px;
+    font-weight: 600;
+    display: flex;
+    padding-left: 50px;
+    font-size: 30px;
+  }
+  .talk {
+    margin-top: 150px;
+  }
+  .services-section h2 {
+    font-size: 25px;
+    margin-right: 15px;
+    padding: 12px;
+    margin-bottom: 40px;
+    border-bottom: 0;
+    border-left: 0;
+    border-right: 0;
+  }
+  .services-section h2:after {
+    margin-left: -180px;
+  }
+  .services-list {
+    font-weight: 600;
+    gap: 50px;
+    margin-left: 10px;
+    margin-right: 30px;
+    font-size: 24px;
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+  }
+  .testimonies {
+    width: 90vw;
+    height: 90vh;
+    margin-top: -120px;
+    margin-left: 50px;
+  }
+  .blue {
+    height: 200px;
+    margin-left: -40px;
+  }
+  .first-img {
+    height: 390px;
+    width: 270px;
+  }
+  .second-img {
+    height: 350px;
+    width: 270px;
+  }
+  .third-img {
+    height: 350px;
+    width: 270px;
+  }
+  .testimony{
+    margin-top: 70px;
+  }
+  .sub-testimony{
+    margin-top: 50px;
+  }
+  .testimonial-img {
+    position: absolute;
+    display: flex;
+    margin-left: -10px;
+    margin-top: 270px;
+  }
+  .testimonial-img img {
+    margin-left: 20px;
+  }
+  .clients-section {
+    height: 50vh;
+  }
+  .clients-text {
+    font-weight: 700;
+    font-size: 23px;
+    padding-right: 900px;
+    margin-left: 100px;
+    margin-top: 300px;
+  }
+  .clients-image {
+    height: 40vh;
+    width: 45vw;
+    margin-top: -200px;
+    margin-left: 40vw;
+  }
+  .blog {
+    margin-top: 0px;
+  }
+  .blog-heading {
+    margin-bottom: 350px;
+    font-weight: 700;
+    font-size: 35px;
+    line-height: 49px;
+    text-align: center;
+  }
+  #stroke-2 {
+    width: 250px;
+    margin-top: -20px;
+    margin-left: 39%;
+    height: 25px;
+  }
+  .blog-content {
+    margin-left: 100px;
+    margin-top: -200px;
+    background: #c4c4c4;
+    width: 350px;
+    height: 450px;
+    position: absolute;
+  }
+  .blog-para {
+    font-size: 30px;
+    margin-left: 0px;
+    padding-left: 100px;
+    margin-top: 280px;
+    padding-right: 400px;
+  }
+  .blog-note {
+    background-color: #5c2e98;
+    height: 35vh;
+    padding-top: 400px;
+    font-weight: 600;
+    font-size: 35px;
+    line-height: 24px;
+    display: flex;
+    padding-left: 110px;
+  }
+  /*services page*/
+  .webdev {
+    margin-top: -200px;
+    margin-left: 55px;
+    height: 550px;
+  }
+  .webdev-h1 {
+    height: 40px;
+    margin-left: 350px;
+    margin-top: 80px;
+  }
+  .webdev-img {
+    height: 300px;
+    margin-top: 0px;
+    margin-left: 30px;
+  }
+  .webdev-para {
+    font-size: 25px;
+    margin-top: -240px;
+    padding-right: 50px;
+    margin-left: 350px;
+  }
+  .viewbtn {
+    height: 80px;
+    margin-top: 30px;
+    margin-left: 350px;
+  }
+  .web-green {
+    height: 300px;
+    margin-top: -90px;
+  }
+  .branding {
+    margin-left: 55px;
+    height: 570px;
+    margin-top: -90px;
+  }
+  .branding-h1 {
+    height: 40px;
+    margin-top: 80px;
+    margin-left: 150px;
+  }
+  .branding-img {
+    height: 300px;
+    margin-top: -380px;
+    margin-left: 65%;
+  }
+  .branding-para {
+    font-size: 25px;
+    margin-top: 50px;
+    padding-right: 450px;
+    margin-left: 100px;
+  }
+  .viewbtn-1 {
+    height: 80px;
+    margin-top: 40px;
+    margin-left: 120px;
+  }
+  .digital-marketing {
+    margin-left: 55px;
+    margin-top: 100px;
+    height: 600px;
+  }
+  .orange {
+    height: 300px;
+    margin-top: -100px;
+    margin-left: 10px;
+  }
+  .marketing-pr {
+    margin-left: 55px;
+    margin-top: -100px;
+    height: 650px;
+  }
+  #pr-img {
+    margin-top: -400px;
+  }
+}
+@media (min-width: 1025px) and (max-width: 1400px) {
+  #id {
+    margin-left: 30px;
+  }
+  #id li {
+    font-size: 12px;
+    margin-left: 70px;
+  }
+  .hero-img {
+    margin-left: 0px;
+    margin-top: 100px;
+    border-bottom: 0;
+    border-right: 0;
+    height: 300px;
+    margin-right: 10px;
+  }
+  .links {
+    margin-top: 220px;
+    margin-left: 40px;
+  }
+  .link {
+    margin-bottom: 50px;
+    height: 30px;
+  }
+  .text {
+    margin-top: -70px;
+    font-size: 20px;
+    margin-left: 150px;
+  }
+  .clients {
+    margin-left: 20%;
     margin-top: 160px;
   }
   .client0 {
@@ -1876,7 +2292,7 @@
   }
   .left {
     height: 200px;
-    margin-left: -270px;
+    margin-left: -295px;
     margin-right: 100px;
     margin-top: 55px;
   }
@@ -1987,7 +2403,7 @@
   }
   .services-section h2 {
     font-size: 25px;
-    margin-right: 50px;
+    margin-right: 15px;
     padding: 12px;
     margin-bottom: 40px;
     border-bottom: 0;
@@ -1999,15 +2415,17 @@
   }
   .services-list {
     font-weight: 600;
-    font-size: 18px;
+    gap: 50px;
+    margin-left: 10px;
+    margin-right: 30px;
+    font-size: 24px;
     display: flex;
-    margin-right: 90px;
     justify-content: space-around;
     text-align: center;
   }
   .testimonies {
     width: 90vw;
-    height: 70vh;
+    height: 90vh;
     margin-top: -120px;
     margin-left: 50px;
   }
@@ -2015,16 +2433,32 @@
     height: 200px;
     margin-left: -40px;
   }
+  .first-img {
+    height: 390px;
+    width: 270px;
+  }
+  .second-img {
+    height: 350px;
+    width: 270px;
+  }
+  .third-img {
+    height: 350px;
+    width: 270px;
+  }
+  .testimony{
+    margin-top: 70px;
+  }
+  .sub-testimony{
+    margin-top: 50px;
+  }
   .testimonial-img {
     position: absolute;
     display: flex;
     margin-left: -10px;
-    margin-top: 150px;
+    margin-top: 270px;
   }
   .testimonial-img img {
-    margin-left: 50px;
-    height: 350px;
-    width: 300px;
+    margin-left: 20px;
   }
   .clients-section {
     height: 50vh;
@@ -2051,12 +2485,11 @@
     font-size: 35px;
     line-height: 49px;
     text-align: center;
-    justify-content: center;
   }
   #stroke-2 {
     width: 250px;
     margin-top: -20px;
-    margin-left: 390px;
+    margin-left: 39%;
     height: 25px;
   }
   .blog-content {
@@ -2093,12 +2526,12 @@
   .webdev-h1 {
     height: 40px;
     margin-left: 350px;
-    margin-top: 60px;
+    margin-top: 80px;
   }
   .webdev-img {
     height: 300px;
     margin-top: 0px;
-    margin-left: 10px;
+    margin-left: 30px;
   }
   .webdev-para {
     font-size: 25px;
@@ -2117,29 +2550,29 @@
   }
   .branding {
     margin-left: 55px;
-    height: 450px;
+    height: 570px;
     margin-top: -90px;
   }
   .branding-h1 {
     height: 40px;
-    margin-top: 40px;
-    margin-left: 100px;
+    margin-top: 80px;
+    margin-left: 150px;
   }
   .branding-img {
     height: 300px;
-    margin-top: -310px;
+    margin-top: -380px;
     margin-left: 65%;
   }
   .branding-para {
     font-size: 25px;
     margin-top: 50px;
-    padding-right: 400px;
-    margin-left: 10px;
+    padding-right: 450px;
+    margin-left: 100px;
   }
   .viewbtn-1 {
     height: 80px;
-    margin-top: 20px;
-    margin-left: 20px;
+    margin-top: 40px;
+    margin-left: 120px;
   }
   .digital-marketing {
     margin-left: 55px;
@@ -2154,10 +2587,10 @@
   .marketing-pr {
     margin-left: 55px;
     margin-top: -100px;
-    height: 470px;
+    height: 650px;
   }
   #pr-img {
-    margin-top: -350px;
+    margin-top: -400px;
   }
 }
 /* END OF CUSTOM STYLES */
