--- a/css/styles.css
+++ b/css/styles.css
@@ -2605,11 +2605,428 @@ video {
   }
 }
 
-@media (min-width: 701px) and (max-width: 1000px) {
-  #nav {
+@media (min-width: 701px) and (max-width: 900px) {
+  #id {
+    margin-left: 0px;
+  }
+
+  #id li {
     margin-left: 10px;
   }
 
+  .hero-img {
+    margin-left: 10px;
+    margin-top: 100px;
+    border-bottom: 0;
+    border-right: 0;
+    height: 250px;
+  }
+
+  .links {
+    margin-top: 200px;
+    margin-left: 25px;
+  }
+
+  .link {
+    margin-bottom: 35px;
+    height: 25px;
+  }
+
+  .text {
+    margin-top: -150px;
+    margin-left: 120px;
+  }
+
+  .clients {
+    margin-left: 50px;
+    margin-top: 160px;
+  }
+
+  .client0 {
+    width: 200.01px;
+    height: 200.01px;
+  }
+
+  .hero-img1 {
+    padding-top: 50px;
+    margin-left: 10px;
+    width: 200.01px;
+    height: 200.01px;
+  }
+
+  .bloom {
+    height: 400px;
+    margin-top: 100px;
+    margin-left: -50px;
+  }
+
+  .whatsapp {
+    margin-top: 320px;
+    margin-left: -45px;
+  }
+
+  .content {
+    margin-top: 200px;
+  }
+
+  .left-content {
+    display: flex;
+  }
+
+  .left {
+    height: 200px;
+    margin-left: -225px;
+    margin-right: 100px;
+    margin-top: 60px;
+  }
+
+  .leftie {
+    height: 190px;
+    margin-top: 55px;
+    margin-right: 102px;
+  }
+
+  .main-content {
+    margin-top: 150px;
+    margin-left: -80px;
+    width: 90vw;
+    height: 550px;
+  }
+
+  .carousel-content {
+    margin-top: 70px;
+    padding-top: 3px;
+    margin-left: 50px;
+    height: 200px;
+    width: 800px;
+  }
+
+  .carousel {
+    height: 200px;
+    width: 500px;
+    margin-left: 3px;
+    padding-bottom: 3px;
+  }
+
+  .name {
+    height: 60px;
+    width: 200px;
+    margin-left: 160px;
+    margin-top: 50px;
+  }
+
+  .para {
+    padding-left: 10px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+    margin-top: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+
+  .right-content {
+    margin-top: 550px;
+    margin-left: -40px;
+    margin-right: -10px;
+  }
+
+  .green {
+    margin-top: 30px;
+    width: 500px;
+    height: 200px;
+  }
+
+  .work-images {
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #work-img {
+    margin-left: -200px;
+  }
+
+  .img-1 {
+    height: 200px;
+    width: 200px;
+  }
+
+  .img-2 {
+    margin-top: 5px;
+    height: 200px;
+    width: 200px;
+    border: 20px solid white;
+    border-left: 0;
+    border-bottom: 0;
+    border-right: 0;
+  }
+
+  .img-3 {
+    margin-top: 5px;
+    height: 200px;
+    width: 200px;
+    border: 6px solid #ff8100;
+    border-top: 0;
+    border-left: 0;
+  }
+
+  #work-images-1 {
+    margin-left: -330px;
+  }
+
+  #work-images-2 {
+    margin-top: -205px;
+    margin-left: 110px;
+  }
+
+  #work-images-3 {
+    margin-top: -205px;
+    margin-left: 560px;
+  }
+
+  .work-text {
+    background-color: #5c2e98;
+    margin-top: -100px;
+    height: 400px;
+    width: 100%;
+    padding-top: 300px;
+    font-weight: 600;
+    display: flex;
+    padding-left: 50px;
+    font-size: 30px;
+  }
+
+  .talk {
+    margin-top: 150px;
+  }
+
+  .services-section h2 {
+    font-size: 18px;
+    margin-right: 10px;
+    padding: 10px;
+    margin-bottom: 40px;
+    border-bottom: 0;
+    border-left: 0;
+    border-right: 0;
+  }
+
+  .services-section h2:after {
+    margin-left: -130px;
+  }
+
+  .services-list {
+    font-weight: 600;
+    font-size: 18px;
+    margin-left: 5px;
+    display: flex;
+    margin-right: 20px;
+    justify-content: space-around;
+    text-align: center;
+  }
+
+  .testimonies {
+    width: 90vw;
+    height: 60vh;
+    margin-top: -120px;
+    margin-left: 40px;
+  }
+
+  .blue {
+    height: 200px;
+    margin-left: -40px;
+  }
+
+  .first-img {
+    height: 280px;
+    width: 200px;
+  }
+
+  .second-img {
+    height: 250px;
+    width: 200px;
+  }
+
+  .third-img {
+    height: 250px;
+    width: 200px;
+  }
+
+  .testimonial-img {
+    position: absolute;
+    display: flex;
+    margin-left: -10px;
+    margin-top: 220px;
+  }
+
+  .testimonial-img img {
+    margin-left: 20px;
+  }
+
+  .clients-section {
+    height: 50vh;
+  }
+
+  .clients-text {
+    font-weight: 700;
+    font-size: 23px;
+    padding-right: 550px;
+    margin-left: 100px;
+    margin-top: 300px;
+  }
+
+  .clients-image {
+    height: 30vh;
+    width: 50vw;
+    margin-top: -220px;
+    margin-left: 40vw;
+  }
+
+  .blog {
+    margin-top: -100px;
+  }
+
+  .blog-heading {
+    margin-bottom: 250px;
+    font-weight: 700;
+    font-size: 35px;
+    line-height: 49px;
+    text-align: center;
+    justify-content: center;
+  }
+
+  #stroke-2 {
+    width: 250px;
+    margin-top: -20px;
+    margin-left: 35%;
+    height: 25px;
+  }
+
+  .blog-content {
+    margin-left: 100px;
+    margin-top: -100px;
+    background: #c4c4c4;
+    width: 250px;
+    height: 300px;
+    position: absolute;
+  }
+
+  .blog-para {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 29px;
+    margin-left: 0px;
+    padding-left: 100px;
+    margin-top: 250px;
+    padding-right: 400px;
+    position: absolute;
+  }
+
+  .blog-note {
+    background-color: #5c2e98;
+    height: 65vh;
+    padding-top: 400px;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 24px;
+    display: flex;
+    padding-left: 110px;
+  }
+
+  /*services page*/
+
+  .webdev {
+    margin-top: -450px;
+    margin-left: 40px;
+    height: 500px;
+  }
+
+  .webdev-h1 {
+    height: 30px;
+    margin-left: 270px;
+    margin-top: 70px;
+  }
+
+  .webdev-img {
+    height: 230px;
+    margin-top: 0px;
+    margin-left: 10px;
+  }
+
+  .webdev-para {
+    font-size: 20px;
+    margin-top: -190px;
+    padding-right: 20px;
+    margin-left: 250px;
+  }
+
+  .viewbtn {
+    height: 70px;
+    margin-top: 30px;
+    margin-left: 250px;
+  }
+
+  .web-green {
+    height: 200px;
+    margin-top: -50px;
+  }
+
+  .branding {
+    margin-left: 40px;
+    height: 450px;
+    margin-top: -40px;
+  }
+
+  .branding-h1 {
+    height: 30px;
+    margin-top: 70px;
+    margin-left: 30px;
+  }
+
+  .branding-img {
+    height: 230px;
+    margin-top: -270px;
+    margin-left: 65%;
+  }
+
+  .branding-para {
+    font-size: 20px;
+    margin-top: 30px;
+    padding-right: 350px;
+    margin-left: 20px;
+  }
+
+  .viewbtn-1 {
+    height: 70px;
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+
+  .digital-marketing {
+    margin-left: 40px;
+    margin-top: 100px;
+    height: 550px;
+  }
+
+  .orange {
+    height: 200px;
+    margin-top: -50px;
+    margin-left: -10px;
+  }
+
+  .marketing-pr {
+    margin-left: 40px;
+    margin-top: -50px;
+    height: 470px;
+  }
+
+  #pr-img {
+    margin-top: -350px;
+  }
+}
+
+@media (min-width: 901px) and (max-width: 1000px) {
   .hero-img {
     margin-left: 10px;
     margin-top: 100px;
@@ -3274,11 +3691,11 @@ video {
     width: 270px;
   }
 
-  .testimony{
+  .testimony {
     margin-top: 70px;
   }
 
-  .sub-testimony{
+  .sub-testimony {
     margin-top: 50px;
   }
 
@@ -3302,13 +3719,13 @@ video {
     font-size: 23px;
     padding-right: 900px;
     margin-left: 100px;
-    margin-top: 300px;
+    margin-top: 400px;
   }
 
   .clients-image {
     height: 40vh;
     width: 45vw;
-    margin-top: -200px;
+    margin-top: -350px;
     margin-left: 40vw;
   }
 
@@ -3704,11 +4121,11 @@ video {
     width: 270px;
   }
 
-  .testimony{
+  .testimony {
     margin-top: 70px;
   }
 
-  .sub-testimony{
+  .sub-testimony {
     margin-top: 50px;
   }
 
