--- a/css/styles.css
+++ b/css/styles.css
@@ -797,6 +797,62 @@ select {
   bottom: 16rem;
 }
 
+.bottom-48 {
+  bottom: 12rem;
+}
+
+.top-48 {
+  top: 12rem;
+}
+
+.left-36 {
+  left: 9rem;
+}
+
+.right-36 {
+  right: 9rem;
+}
+
+.right-24 {
+  right: 6rem;
+}
+
+.top-36 {
+  top: 9rem;
+}
+
+.right-48 {
+  right: 12rem;
+}
+
+.top-56 {
+  top: 14rem;
+}
+
+.top-72 {
+  top: 18rem;
+}
+
+.right-28 {
+  right: 7rem;
+}
+
+.bottom-56 {
+  bottom: 14rem;
+}
+
+.bottom-72 {
+  bottom: 18rem;
+}
+
+.right-4 {
+  right: 1rem;
+}
+
+.-right-8 {
+  right: -2rem;
+}
+
 .z-40 {
   z-index: 40;
 }
@@ -821,6 +877,30 @@ select {
   margin: 1rem;
 }
 
+.m-0 {
+  margin: 0px;
+}
+
+.m-12 {
+  margin: 3rem;
+}
+
+.m-8 {
+  margin: 2rem;
+}
+
+.m-10 {
+  margin: 2.5rem;
+}
+
+.m-5 {
+  margin: 1.25rem;
+}
+
+.m-3 {
+  margin: 0.75rem;
+}
+
 .mx-8 {
   margin-left: 2rem;
   margin-right: 2rem;
@@ -839,6 +919,36 @@ select {
 .my-10 {
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
+}
+
+.mx-12 {
+  margin-left: 3rem;
+  margin-right: 3rem;
+}
+
+.mx-16 {
+  margin-left: 4rem;
+  margin-right: 4rem;
+}
+
+.my-48 {
+  margin-top: 12rem;
+  margin-bottom: 12rem;
+}
+
+.my-24 {
+  margin-top: 6rem;
+  margin-bottom: 6rem;
+}
+
+.my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
+.my-12 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 
 .mr-3 {
@@ -925,8 +1035,84 @@ select {
   margin-bottom: 3rem;
 }
 
+.mt-48 {
+  margin-top: 12rem;
+}
+
+.mt-64 {
+  margin-top: 16rem;
+}
+
+.mt-72 {
+  margin-top: 18rem;
+}
+
+.mr-12 {
+  margin-right: 3rem;
+}
+
+.ml-12 {
+  margin-left: 3rem;
+}
+
+.ml-16 {
+  margin-left: 4rem;
+}
+
+.mr-16 {
+  margin-right: 4rem;
+}
+
+.ml-0 {
+  margin-left: 0px;
+}
+
+.mt-36 {
+  margin-top: 9rem;
+}
+
+.mt-56 {
+  margin-top: 14rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
+}
+
+.mr-8 {
+  margin-right: 2rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .block {
   display: block;
+}
+
+.inline-block {
+  display: inline-block;
 }
 
 .inline {
@@ -935,6 +1121,10 @@ select {
 
 .flex {
   display: flex;
+}
+
+.grid {
+  display: grid;
 }
 
 .hidden {
@@ -967,6 +1157,10 @@ select {
   height: fit-content;
 }
 
+.h-12 {
+  height: 3rem;
+}
+
 .w-full {
   width: 100%;
 }
@@ -991,16 +1185,68 @@ select {
   width: 2rem;
 }
 
+.w-56 {
+  width: 14rem;
+}
+
+.basis-3\/5 {
+  flex-basis: 60%;
+}
+
+.basis-2\/5 {
+  flex-basis: 40%;
+}
+
+.rotate-90 {
+  --tw-rotate: 90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-0 {
+  --tw-rotate: 0deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[270deg\] {
+  --tw-rotate: 270deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-rotate-90 {
+  --tw-rotate: -90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .cursor-pointer {
   cursor: pointer;
+}
+
+.list-disc {
+  list-style-type: disc;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .flex-col {
   flex-direction: column;
 }
 
+.content-between {
+  align-content: space-between;
+}
+
 .items-start {
   align-items: flex-start;
+}
+
+.items-end {
+  align-items: flex-end;
 }
 
 .items-center {
@@ -1027,14 +1273,48 @@ select {
   justify-content: space-between;
 }
 
+.justify-around {
+  justify-content: space-around;
+}
+
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-12 {
+  gap: 3rem;
+}
+
+.gap-16 {
+  gap: 4rem;
 }
 
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
+.space-y-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
+.self-center {
+  align-self: center;
 }
 
 .justify-self-start {
@@ -1047,6 +1327,14 @@ select {
 
 .border-t-2 {
   border-top-width: 2px;
+}
+
+.border-t {
+  border-top-width: 1px;
+}
+
+.border-l {
+  border-left-width: 1px;
 }
 
 .border-bloom-orange {
@@ -1098,12 +1386,8 @@ select {
   padding: 1.25rem;
 }
 
-.p-1 {
-  padding: 0.25rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
+.p-0 {
+  padding: 0px;
 }
 
 .py-4 {
@@ -1137,8 +1421,44 @@ select {
   padding-top: 0.75rem;
 }
 
+.pt-16 {
+  padding-top: 4rem;
+}
+
+.pl-12 {
+  padding-left: 3rem;
+}
+
+.pt-12 {
+  padding-top: 3rem;
+}
+
+.pb-1 {
+  padding-bottom: 0.25rem;
+}
+
+.pl-5 {
+  padding-left: 1.25rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
 .text-center {
   text-align: center;
+}
+
+.align-baseline {
+  vertical-align: baseline;
+}
+
+.align-top {
+  vertical-align: top;
 }
 
 .text-xs {
@@ -1171,6 +1491,29 @@ select {
   line-height: 1.75rem;
 }
 
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
+.text-\[64px\] {
+  font-size: 64px;
+}
+
+.text-\[68px\] {
+  font-size: 68px;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .font-medium {
   font-weight: 500;
 }
@@ -1187,6 +1530,22 @@ select {
   font-weight: 400;
 }
 
+.font-extrabold {
+  font-weight: 800;
+}
+
+.leading-tight {
+  line-height: 1.25;
+}
+
+.leading-none {
+  line-height: 1;
+}
+
+.leading-relaxed {
+  line-height: 1.625;
+}
+
 .tracking-tighter {
   letter-spacing: -0.05em;
 }
@@ -1199,6 +1558,17 @@ select {
 .text-bloom-orange {
   --tw-text-opacity: 1;
   color: rgb(255 129 0 / var(--tw-text-opacity));
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-bloom-orange\/20 {
+  --tw-shadow-color: rgb(255 129 0 / 0.2);
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .backdrop-blur-2xl {
@@ -1225,13 +1595,6 @@ select {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-* {
-  padding: 0;
-  margin: 0;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
-}
-
 /* CUSTOM STYLES */
 
 .box-border-gradient {
@@ -1251,92 +1614,9 @@ select {
   border-width: 1px;
 }
 
-#id {
-  margin-left: 0px;
-}
-
-#id li {
-  margin-left: 70px;
-}
-
-.hero {
-  display: flex;
-}
-
-.hero-img {
-  margin-left: 50px;
-  margin-top: 100px;
-  border: 0.5px solid #ffffff;
-  padding: 30px 30px;
-  border-bottom: 0;
-  border-right: 0;
-  height: 450px;
-}
-
-.links {
-  margin-top: 250px;
-  margin-left: 50px;
-  background: none;
-}
-
-.link {
-  margin-bottom: 50px;
-}
-
-.link-text {
-  color: #ff8100;
-  transform: rotate(270deg);
-  font-weight: bolder;
-}
-
-.text {
-  color: #ff8100;
-  font-weight: 500;
-  display: flex;
-  margin-top: -200px;
-  margin-left: 216px;
-}
-
-#svg {
-  color: #ff8100;
-}
-
-.clients {
-  margin-left: 200px;
-  margin-top: 200px;
-}
-
-.client0 {
-  width: 400.01px;
-  height: 400.01px;
-  border-radius: 50%;
-  background-color: white;
-}
-
-.hero-img1 {
-  padding-top: 50px;
-  width: auto;
-  margin-left: 10px;
-  position: absolute;
-  background: #ff8100;
-  width: 393.01px;
-  height: 393.01px;
-  border-radius: 50%;
-}
-
-.bloom {
-  margin-top: 70px;
-  margin-left: -50px;
-}
-
-.whatsapp {
-  margin-top: 60vh;
-  margin-left: -60px;
-}
-
 .content {
   display: flex;
-  margin-top: 300px;
+  margin-top: 30px;
 }
 
 .left {
@@ -4713,6 +4993,11 @@ select {
 
 /* END OF CUSTOM STYLES */
 
+.hover\:bg-bloom-orange:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 129 0 / var(--tw-bg-opacity));
+}
+
 .hover\:text-bloom-orange:hover {
   --tw-text-opacity: 1;
   color: rgb(255 129 0 / var(--tw-text-opacity));
@@ -4781,6 +5066,16 @@ select {
     margin-right: 2.5rem;
   }
 
+  .md\:mx-16 {
+    margin-left: 4rem;
+    margin-right: 4rem;
+  }
+
+  .md\:my-24 {
+    margin-top: 6rem;
+    margin-bottom: 6rem;
+  }
+
   .md\:mt-20 {
     margin-top: 5rem;
   }
@@ -4803,6 +5098,34 @@ select {
 
   .md\:mt-52 {
     margin-top: 13rem;
+  }
+
+  .md\:mt-36 {
+    margin-top: 9rem;
+  }
+
+  .md\:mt-56 {
+    margin-top: 14rem;
+  }
+
+  .md\:mr-16 {
+    margin-right: 4rem;
+  }
+
+  .md\:mt-8 {
+    margin-top: 2rem;
+  }
+
+  .md\:mt-32 {
+    margin-top: 8rem;
+  }
+
+  .md\:mt-1 {
+    margin-top: 0.25rem;
+  }
+
+  .md\:ml-8 {
+    margin-left: 2rem;
   }
 
   .md\:block {
@@ -4833,6 +5156,10 @@ select {
     height: 18rem;
   }
 
+  .md\:h-40 {
+    height: 10rem;
+  }
+
   .md\:w-auto {
     width: auto;
   }
@@ -4845,8 +5172,20 @@ select {
     flex-basis: 50%;
   }
 
+  .md\:basis-3\/5 {
+    flex-basis: 60%;
+  }
+
+  .md\:basis-2\/5 {
+    flex-basis: 40%;
+  }
+
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:flex-row {
@@ -4865,6 +5204,24 @@ select {
     align-items: center;
   }
 
+  .md\:justify-start {
+    justify-content: flex-start;
+  }
+
+  .md\:space-y-8 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+  }
+
+  .md\:border-t {
+    border-top-width: 1px;
+  }
+
+  .md\:border-l {
+    border-left-width: 1px;
+  }
+
   .md\:py-0 {
     padding-top: 0px;
     padding-bottom: 0px;
@@ -4881,6 +5238,18 @@ select {
 
   .md\:pt-8 {
     padding-top: 2rem;
+  }
+
+  .md\:pt-12 {
+    padding-top: 3rem;
+  }
+
+  .md\:pl-8 {
+    padding-left: 2rem;
+  }
+
+  .md\:pl-12 {
+    padding-left: 3rem;
   }
 
   .md\:text-left {
@@ -4915,6 +5284,19 @@ select {
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .md\:font-medium {
+    font-weight: 500;
+  }
+
+  .md\:leading-none {
+    line-height: 1;
   }
 
   .md\:tracking-tight {
@@ -4969,8 +5351,20 @@ select {
     margin-top: 13rem;
   }
 
+  .lg\:mt-48 {
+    margin-top: 12rem;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
   .lg\:flex {
     display: flex;
+  }
+
+  .lg\:hidden {
+    display: none;
   }
 
   .lg\:h-\[40rem\] {
@@ -4981,8 +5375,20 @@ select {
     width: 100%;
   }
 
+  .lg\:basis-2\/5 {
+    flex-basis: 40%;
+  }
+
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
   .lg\:gap-8 {
     gap: 2rem;
+  }
+
+  .lg\:gap-4 {
+    gap: 1rem;
   }
 
   .lg\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
@@ -5015,6 +5421,14 @@ select {
     padding-left: 0px;
   }
 
+  .lg\:pt-16 {
+    padding-top: 4rem;
+  }
+
+  .lg\:pl-12 {
+    padding-left: 3rem;
+  }
+
   .lg\:text-left {
     text-align: left;
   }
@@ -5034,6 +5448,10 @@ select {
     line-height: 2.5rem;
   }
 
+  .lg\:text-\[64px\] {
+    font-size: 64px;
+  }
+
   .lg\:font-semibold {
     font-weight: 600;
   }
@@ -5044,23 +5462,34 @@ select {
     bottom: 18rem;
   }
 
+  .xl\:mx-24 {
+    margin-left: 6rem;
+    margin-right: 6rem;
+  }
+
+  .xl\:h-16 {
+    height: 4rem;
+  }
+
+  .xl\:w-64 {
+    width: 16rem;
+  }
+
+  .xl\:gap-24 {
+    gap: 6rem;
+  }
+
+  .xl\:pt-4 {
+    padding-top: 1rem;
+  }
+
   .xl\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
 
-  .xl\:text-7xl {
-    font-size: 4.5rem;
-    line-height: 1;
-  }
-
-  .xl\:text-6xl {
-    font-size: 3.75rem;
-    line-height: 1;
-  }
-
-  .xl\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .xl\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
