--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ html {
   -o-tab-size: 4;
      tab-size: 4;
   /* 3 */
-  font-family: Montserrat, sans-serif;
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
@@ -832,6 +832,78 @@ select {
   top: 0.75rem;
 }
 
+.top-24 {
+  top: 6rem;
+}
+
+.top-16 {
+  top: 4rem;
+}
+
+.top-12 {
+  top: 3rem;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
+.bottom-40 {
+  bottom: 10rem;
+}
+
+.bottom-56 {
+  bottom: 14rem;
+}
+
+.left-12 {
+  left: 3rem;
+}
+
+.bottom-48 {
+  bottom: 12rem;
+}
+
+.left-8 {
+  left: 2rem;
+}
+
+.bottom-52 {
+  bottom: 13rem;
+}
+
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
+.bottom-28 {
+  bottom: 7rem;
+}
+
+.left-6 {
+  left: 1.5rem;
+}
+
+.bottom-24 {
+  bottom: 6rem;
+}
+
+.right-24 {
+  right: 6rem;
+}
+
+.right-8 {
+  right: 2rem;
+}
+
+.right-28 {
+  right: 7rem;
+}
+
+.right-32 {
+  right: 8rem;
+}
+
 .-z-40 {
   z-index: -40;
 }
@@ -933,6 +1005,16 @@ select {
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
+}
+
+.mx-16 {
+  margin-left: 4rem;
+  margin-right: 4rem;
+}
+
+.my-36 {
+  margin-top: 9rem;
+  margin-bottom: 9rem;
 }
 
 .mb-0 {
@@ -1087,6 +1169,14 @@ select {
   margin-top: 20rem;
 }
 
+.ml-12 {
+  margin-left: 3rem;
+}
+
+.ml-16 {
+  margin-left: 4rem;
+}
+
 .block {
   display: block;
 }
@@ -1192,6 +1282,10 @@ select {
   height: 100%;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
 .w-11\/12 {
   width: 91.666667%;
 }
@@ -1256,12 +1350,25 @@ select {
   width: 100vw;
 }
 
+.w-auto {
+  width: auto;
+}
+
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .max-w-2xl {
   max-width: 42rem;
 }
 
 .max-w-md {
   max-width: 28rem;
+}
+
+.grow {
+  flex-grow: 1;
 }
 
 .basis-1\/2 {
@@ -1678,10 +1785,6 @@ select {
   padding-left: 0.5rem;
 }
 
-.pl-7 {
-  padding-left: 1.75rem;
-}
-
 .pr-5 {
   padding-right: 1.25rem;
 }
@@ -1694,6 +1797,14 @@ select {
   padding-top: 0.75rem;
 }
 
+.pb-3\.5 {
+  padding-bottom: 0.875rem;
+}
+
+.pb-2\.5 {
+  padding-bottom: 0.625rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1704,6 +1815,10 @@ select {
 
 .text-justify {
   text-align: justify;
+}
+
+.font-grotesk {
+  font-family: grotesk, sans-serif;
 }
 
 .text-2xl {
@@ -1774,8 +1889,20 @@ select {
   line-height: 1.25;
 }
 
+.leading-8 {
+  line-height: 2rem;
+}
+
 .tracking-tighter {
   letter-spacing: -0.05em;
+}
+
+.tracking-normal {
+  letter-spacing: 0em;
+}
+
+.tracking-wide {
+  letter-spacing: 0.025em;
 }
 
 .text-black {
@@ -1909,6 +2036,12 @@ select {
 
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+
+@font-face {
+  font-family: "grotesk";
+
+  src: url("../assets/Schibsted_Grotesk/SchibstedGrotesk.ttf");
 }
 
 /* CUSTOM STYLES */
@@ -5569,6 +5702,58 @@ select {
     top: 12rem;
   }
 
+  .md\:top-10 {
+    top: 2.5rem;
+  }
+
+  .md\:top-16 {
+    top: 4rem;
+  }
+
+  .md\:left-24 {
+    left: 6rem;
+  }
+
+  .md\:left-16 {
+    left: 4rem;
+  }
+
+  .md\:left-12 {
+    left: 3rem;
+  }
+
+  .md\:bottom-32 {
+    bottom: 8rem;
+  }
+
+  .md\:bottom-52 {
+    bottom: 13rem;
+  }
+
+  .md\:bottom-56 {
+    bottom: 14rem;
+  }
+
+  .md\:bottom-36 {
+    bottom: 9rem;
+  }
+
+  .md\:left-10 {
+    left: 2.5rem;
+  }
+
+  .md\:bottom-0 {
+    bottom: 0px;
+  }
+
+  .md\:bottom-20 {
+    bottom: 5rem;
+  }
+
+  .md\:bottom-48 {
+    bottom: 12rem;
+  }
+
   .md\:-z-50 {
     z-index: -50;
   }
@@ -5622,6 +5807,21 @@ select {
   .md\:my-5 {
     margin-top: 1.25rem;
     margin-bottom: 1.25rem;
+  }
+
+  .md\:mx-24 {
+    margin-left: 6rem;
+    margin-right: 6rem;
+  }
+
+  .md\:my-36 {
+    margin-top: 9rem;
+    margin-bottom: 9rem;
+  }
+
+  .md\:my-24 {
+    margin-top: 6rem;
+    margin-bottom: 6rem;
   }
 
   .md\:mb-0 {
@@ -5756,6 +5956,18 @@ select {
     width: auto;
   }
 
+  .md\:w-12 {
+    width: 3rem;
+  }
+
+  .md\:w-24 {
+    width: 6rem;
+  }
+
+  .md\:w-16 {
+    width: 4rem;
+  }
+
   .md\:max-w-full {
     max-width: 100%;
   }
@@ -5792,6 +6004,10 @@ select {
     grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
@@ -5818,6 +6034,10 @@ select {
 
   .md\:gap-8 {
     gap: 2rem;
+  }
+
+  .md\:gap-4 {
+    gap: 1rem;
   }
 
   .md\:space-y-8 > :not([hidden]) ~ :not([hidden]) {
@@ -5905,6 +6125,18 @@ select {
 
   .md\:pt-8 {
     padding-top: 2rem;
+  }
+
+  .md\:pb-2 {
+    padding-bottom: 0.5rem;
+  }
+
+  .md\:pb-1 {
+    padding-bottom: 0.25rem;
+  }
+
+  .md\:pb-1\.5 {
+    padding-bottom: 0.375rem;
   }
 
   .md\:text-left {
@@ -6017,6 +6249,26 @@ select {
     top: 1.25rem;
   }
 
+  .lg\:top-16 {
+    top: 4rem;
+  }
+
+  .lg\:bottom-64 {
+    bottom: 16rem;
+  }
+
+  .lg\:bottom-72 {
+    bottom: 18rem;
+  }
+
+  .lg\:bottom-40 {
+    bottom: 10rem;
+  }
+
+  .lg\:bottom-56 {
+    bottom: 14rem;
+  }
+
   .lg\:-z-50 {
     z-index: -50;
   }
@@ -6042,6 +6294,11 @@ select {
   .lg\:mx-24 {
     margin-left: 6rem;
     margin-right: 6rem;
+  }
+
+  .lg\:mx-20 {
+    margin-left: 5rem;
+    margin-right: 5rem;
   }
 
   .lg\:mb-16 {
@@ -6122,6 +6379,10 @@ select {
 
   .lg\:mt-8 {
     margin-top: 2rem;
+  }
+
+  .lg\:mt-auto {
+    margin-top: auto;
   }
 
   .lg\:block {
@@ -6205,6 +6466,10 @@ select {
     gap: 2rem;
   }
 
+  .lg\:gap-0 {
+    gap: 0px;
+  }
+
   .lg\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
     margin-right: calc(1rem * var(--tw-space-x-reverse));
@@ -6285,6 +6550,16 @@ select {
     padding-bottom: 1.25rem;
   }
 
+  .lg\:px-36 {
+    padding-left: 9rem;
+    padding-right: 9rem;
+  }
+
+  .lg\:px-28 {
+    padding-left: 7rem;
+    padding-right: 7rem;
+  }
+
   .lg\:pb-32 {
     padding-bottom: 8rem;
   }
@@ -6307,6 +6582,22 @@ select {
 
   .lg\:pt-16 {
     padding-top: 4rem;
+  }
+
+  .lg\:pb-2 {
+    padding-bottom: 0.5rem;
+  }
+
+  .lg\:pb-1 {
+    padding-bottom: 0.25rem;
+  }
+
+  .lg\:pb-0 {
+    padding-bottom: 0px;
+  }
+
+  .lg\:pt-1 {
+    padding-top: 0.25rem;
   }
 
   .lg\:text-left {
@@ -6357,6 +6648,11 @@ select {
     line-height: 1.75rem;
   }
 
+  .lg\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
   .lg\:font-bold {
     font-weight: 700;
   }
@@ -6383,6 +6679,50 @@ select {
     bottom: 18rem;
   }
 
+  .xl\:top-12 {
+    top: 3rem;
+  }
+
+  .xl\:top-8 {
+    top: 2rem;
+  }
+
+  .xl\:top-6 {
+    top: 1.5rem;
+  }
+
+  .xl\:bottom-96 {
+    bottom: 24rem;
+  }
+
+  .xl\:bottom-80 {
+    bottom: 20rem;
+  }
+
+  .xl\:bottom-48 {
+    bottom: 12rem;
+  }
+
+  .xl\:bottom-52 {
+    bottom: 13rem;
+  }
+
+  .xl\:bottom-64 {
+    bottom: 16rem;
+  }
+
+  .xl\:bottom-56 {
+    bottom: 14rem;
+  }
+
+  .xl\:bottom-32 {
+    bottom: 8rem;
+  }
+
+  .xl\:bottom-40 {
+    bottom: 10rem;
+  }
+
   .xl\:mx-24 {
     margin-left: 6rem;
     margin-right: 6rem;
@@ -6402,6 +6742,14 @@ select {
     margin-left: 14rem;
   }
 
+  .xl\:block {
+    display: block;
+  }
+
+  .xl\:flex {
+    display: flex;
+  }
+
   .xl\:h-16 {
     height: 4rem;
   }
@@ -6410,8 +6758,16 @@ select {
     height: 390px;
   }
 
+  .xl\:h-8 {
+    height: 2rem;
+  }
+
   .xl\:w-64 {
     width: 16rem;
+  }
+
+  .xl\:w-12 {
+    width: 3rem;
   }
 
   .xl\:grid-cols-4 {
@@ -6424,6 +6780,10 @@ select {
 
   .xl\:gap-24 {
     gap: 6rem;
+  }
+
+  .xl\:gap-0 {
+    gap: 0px;
   }
 
   .xl\:gap-x-8 {
@@ -6446,8 +6806,34 @@ select {
     padding-bottom: 1.25rem;
   }
 
+  .xl\:px-56 {
+    padding-left: 14rem;
+    padding-right: 14rem;
+  }
+
+  .xl\:px-64 {
+    padding-left: 16rem;
+    padding-right: 16rem;
+  }
+
   .xl\:pt-4 {
     padding-top: 1rem;
+  }
+
+  .xl\:pb-1 {
+    padding-bottom: 0.25rem;
+  }
+
+  .xl\:pb-0 {
+    padding-bottom: 0px;
+  }
+
+  .xl\:pb-2 {
+    padding-bottom: 0.5rem;
+  }
+
+  .xl\:pb-1\.5 {
+    padding-bottom: 0.375rem;
   }
 
   .xl\:text-2xl {
@@ -6473,5 +6859,25 @@ select {
   .xl\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .xl\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .xl\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .xl\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .xl\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 }
