--- a/css/styles.css
+++ b/css/styles.css
@@ -1017,6 +1017,31 @@ select {
   margin-bottom: 9rem;
 }
 
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .mb-0 {
   margin-bottom: 0px;
 }
@@ -1365,6 +1390,10 @@ select {
 
 .max-w-md {
   max-width: 28rem;
+}
+
+.flex-initial {
+  flex: 0 1 auto;
 }
 
 .grow {
@@ -5908,6 +5937,10 @@ select {
     margin-top: 2rem;
   }
 
+  .md\:mb-5 {
+    margin-bottom: 1.25rem;
+  }
+
   .md\:block {
     display: block;
   }
@@ -6740,6 +6773,10 @@ select {
 
   .xl\:ml-56 {
     margin-left: 14rem;
+  }
+
+  .xl\:mt-20 {
+    margin-top: 5rem;
   }
 
   .xl\:block {
